# neuron

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
baseline/: README.md  build_legacy.sh  run_xor.sh  verify_oracle.sh  xor.in  xor_train_save.in  xor_verify.in
docs/: cross_validation.md  cv_refactoring_architecture.md  deploy.md  evaluation_report_spec.md  gui_cli_parity.md  nested_obd_nondeterminism_handoff.md  nested_obd_nondeterminism_resolution_report.md  obd_plan.md  roc_theory.md  spin.html  xor.csv
docs/datasets/: README.md
docs/datasets/bank-marketing/: README.md  WALKTHROUGH.md  bank_spec.txt
docs/datasets/low-birth-weight/: README.md  lowbwt2-2betas.txt
docs/datasets/prostate-biopsy/: BP40test.txt  BP40train.txt  README.md  Run9  psa_defs.txt  psa_scales.txt  psa_spec.txt
docs/tex/: bareprop.tex  driver.tex  drivertext.tex  manifest.tex  maths.tex  network.tex
engine/src/: backprop.h  bareprop.h  dataset.cpp  iterative.cpp  iterative.h  logistic.cpp  matrix.cpp  matrix.h  model.cpp  model.h  network.cpp  network.h  stats.cpp  twoset.h  utility.cpp  utility.h  vector_ops.cpp  vector_ops.h
src/: autoalgo.cpp  autoalgo.h  backprop.cpp  bareprop.cpp  crossval.cpp  crossval.h  cvadapters.cpp  cvadapters.h  cvreport.cpp  cvreport.h  dataset.cpp  dataset.h  delong.cpp  delong.h  dfa.cpp  dfa.h  function_defs.h  gui.cpp  gui.h  gui_page.h.in  gui_page.html  iterative.cpp  iterative.h  ldfa.cpp  ldfa.h  logistic.cpp  logistic.h  matrix.h  model.cpp  model.h  modelfactory.cpp  modelfactory.h  netclone.cpp  netclone.h  network.cpp  network.h  neuron.cpp  obd.cpp  obd.h  plateau.h  (+17 more)
tests/binormal/: check_az.cpp  check_wickens.cpp
tests/capture/: check_capture.cpp
tests/crossval/: check_crossval.cpp
tests/delong/: check_delong.cpp
tests/golden/: binormal_seed42.expected  binormal_seed42.in  lowbwt2-2train.txt  regress_seed42.expected  regress_seed42.in  run_golden.sh  xor_discrete.set  xor_seed42.expected  xor_seed42.in
tests/gui/: smoke.sh
tests/matrix/: check_matrix.cpp
tests/obd/: check_obd.cpp
tests/oracle/: README.md  build_oracle.sh  run_xor.sh  verify_oracle.sh  xor_discrete.set  xor_net.txt  xor_reference_output.txt  xor_train_save.in  xor_verify.in
tests/plateau/: check_plateau.cpp
tests/split/: check_split.cpp
tests/tools/: expected_cat_data.txt  expected_cat_inputs.txt  expected_cat_key.txt  expected_cat_stdout.txt  expected_data.txt  expected_ref_data.txt  expected_ref_inputs.txt  expected_ref_key.txt  expected_ref_stdout.txt  expected_stdout.txt  expected_xor.html  expected_xor_stdout.txt  run_tools.sh  sample.csv  sample_categorical.csv  xor_guesses.txt  xor_scales.txt  xor_spec.txt
tests/tools/runs/: .gitignore  CLAUDE.md  inputs.txt  key.txt
tests/twoset/: check_hl.cpp
tools/: README.md  mkdataset.py  neuron2web.py
